# jobuddy

./: .env.example  .gitignore  DEV_DIARY.md  README.md
.serena/: project.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/config/: agents.yaml  tasks.yaml
backend/app/agents/flows/: job_application_flow.py
backend/app/api/: deps.py
backend/app/api/v1/: applications.py  browser.py  chat.py  jobs.py  router.py  users.py
backend/app/models/: __init__.py  application.py  chat.py  job.py  user.py
backend/app/schemas/: __init__.py  application.py  chat.py  job.py  user.py
backend/app/services/: browser_manager.py  chat_service.py  cover_letter_writer.py  form_filler.py  job_search.py  rag_service.py  resume_parser.py  resume_tailor.py  websocket_manager.py
documents/: DataBadger Portfolio.docx  DetailedResume.docx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ApplicationStatus.tsx  Chat.tsx  Dashboard.tsx  JobList.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
